--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,22 @@
 
 
     <EditText
+        android:id="@+id/phone_number_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:inputType="phone"
+        android:textColorHighlight="@color/blue_1"
         android:hint="Номер телефона"
         />
 
     <EditText
+        android:id="@+id/password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:hint="Пароль"
+        android:textColorHighlight="@color/blue_1"
         android:inputType="textPassword"
         />
 
@@ -33,7 +37,7 @@
         android:text="Войти"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:background="@drawable/bg_button"
+        android:background="@drawable/bg_activity_map_view_blue_button"
         android:textAllCaps="false"
         android:gravity="center"
         android:elevation="6dp"
