--- a/app/src/main/res/layout/dialog_fragment_custom_marker.xml
+++ b/app/src/main/res/layout/dialog_fragment_custom_marker.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/lamp_turn_on_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_activity_map_view_green_button"
@@ -20,6 +21,7 @@
         />
 
     <Button
+        android:id="@+id/lamp_turn_off_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_red_button"
@@ -32,11 +34,13 @@
         />
 
     <SeekBar
+        android:id="@+id/lamp_brightness"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:progressBackgroundTint="@color/blue_1"
-        android:progress="50"
+        android:progress="5"
+        android:max="10"
         android:paddingHorizontal="30dp"
         android:layout_marginBottom="10dp"
         />
