--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -50,13 +50,74 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/groups_layout"
+        android:id="@+id/buttons_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:layout_below="@id/buttons_layout"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/all_turn_on_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Заявка на включение"
+                android:textAllCaps="false"
+                android:gravity="center"
+                android:elevation="2dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="5dp"
+                android:letterSpacing="0"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_activity_map_view_green_button"
+                />
+
+            <Button
+                android:id="@+id/all_turn_off_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Заявка на выключение"
+                android:layout_weight="1"
+                android:textAllCaps="false"
+                android:gravity="center"
+                android:elevation="2dp"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_red_button"
+                android:letterSpacing="0"
+                />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/all_lamp_brightness"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:progressBackgroundTint="@color/blue_1"
+            android:maxLines="1"
+            android:hint="Яркость"
+            android:background="@drawable/bg_activity_map_view_groups_layout"
+            android:padding="5dp"
+            android:inputType="number"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/groups_layout"
+        android:layout_below="@id/buttons_layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_activity_map_view_groups_layout"
         android:elevation="2dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="20dp"
         android:orientation="horizontal">
