--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -141,32 +141,50 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Все"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_marginEnd="3dp"
-                />
-
-            <ImageView
+                android:id="@+id/selected_group_name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_outline_arrow_forward_ios_24"
+                android:text="Все"
+                />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 />
 
         </LinearLayout>
 
     </LinearLayout>
 
-
-    <com.yandex.mapkit.mapview.MapView
-        android:id="@+id/map_view"
+    <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_height="match_parent"
         android:layout_below="@id/groups_layout"
         android:layout_marginBottom="8dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true">
+
+        <com.yandex.mapkit.mapview.MapView
+            android:id="@+id/map_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            />
+
+        <ImageView
+            android:id="@+id/refresh_map_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:layout_margin="15dp"
+            android:background="@drawable/bg_refresh_map_button"
+            android:elevation="2dp"
+            android:padding="4dp"
+            android:src="@drawable/ic_refresh_map" />
+
+
+    </FrameLayout>
+
 
 </RelativeLayout>
