--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -125,6 +125,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/groups_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Группы"
