--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -177,6 +177,16 @@
             android:padding="4dp"
             android:src="@drawable/ic_refresh_map" />
 
+        <ImageView
+            android:id="@+id/user_location_map_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:layout_margin="15dp"
+            android:background="@drawable/bg_refresh_map_button"
+            android:elevation="2dp"
+            android:padding="4dp"
+            android:src="@drawable/ic_user_location" />
 
     </FrameLayout>
 
