--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="blue_1">#125AD4</color>
+    <color name="blue_2">#4A81FF</color>
     <color name="red_1">#F0432D</color>
     <color name="bg_app">#F1F0F0</color>
     <color name="green_1">#4BC539</color>
