--- a/app/src/main/res/layout/dialog_fragment_custom_marker.xml
+++ b/app/src/main/res/layout/dialog_fragment_custom_marker.xml
@@ -84,6 +84,7 @@
         android:textAllCaps="false"
         android:text="Подробнее"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         />
 
 </LinearLayout>
