--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -9,53 +9,13 @@
     tools:context=".MapViewActivity">
 
     <LinearLayout
-        android:id="@+id/buttons_layout"
-        android:layout_alignParentTop="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/add_lamp_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Добавить фонарь"
-            android:textAllCaps="false"
-            android:gravity="center"
-            android:elevation="2dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="5dp"
-            android:letterSpacing="0"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_activity_map_view_green_button"
-            />
-
-        <Button
-            android:id="@+id/add_group_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Добавить группу"
-            android:layout_weight="1"
-            android:textAllCaps="false"
-            android:gravity="center"
-            android:elevation="2dp"
-            android:layout_marginStart="5dp"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_activity_map_view_blue_button"
-            android:letterSpacing="0"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/buttons_layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_below="@id/buttons_layout"
+        android:layout_alignParentTop="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical">
 
         <LinearLayout
@@ -105,11 +65,13 @@
             android:progressBackgroundTint="@color/blue_1"
             android:maxLines="1"
             android:hint="Яркость"
+            android:focusedByDefault="false"
             android:background="@drawable/bg_activity_map_view_groups_layout"
             android:padding="5dp"
             android:paddingHorizontal="10dp"
             android:inputType="number"
             />
+
     </LinearLayout>
 
     <Button
@@ -119,6 +81,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:text="Все заявки"
+        android:elevation="2dp"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:letterSpacing="0"
@@ -190,20 +153,9 @@
             android:background="@drawable/bg_refresh_map_button"
             android:elevation="2dp"
             android:padding="4dp"
-            android:src="@drawable/ic_refresh_map" />
-
-        <ImageView
-            android:id="@+id/user_location_map_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:layout_margin="15dp"
-            android:background="@drawable/bg_refresh_map_button"
-            android:elevation="2dp"
-            android:padding="4dp"
-            android:src="@drawable/ic_user_location" />
+            android:src="@drawable/ic_refresh_map"
+            />
 
     </FrameLayout>
-
 
 </RelativeLayout>
