--- a/app/src/main/res/layout/request_item.xml
+++ b/app/src/main/res/layout/request_item.xml
@@ -6,11 +6,23 @@
 
 
     <TextView
-        android:id="@+id/request_item_text"
+        android:id="@+id/request_item_lamp_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:text="LampId"
+        android:layout_marginStart="30dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        />
+
+    <TextView
+        android:id="@+id/request_item_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/request_item_lamp_id"
         android:text="Текст заявки"
         android:textColor="@color/black"
         android:layout_marginStart="30dp"
